# PFERD

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CONFIG.md  DEV.md  LICENSE  README.md  REWRITE.md  example_config.py  example_config_personal_desktop.py  flake.nix  mypy.ini  pferd.py  plan.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  sync_url.py  test.py
.github/workflows/: build-and-release.yml  package.yml
PFERD/: IliasAuthenticators.py  __init__.py  __main__.py  authenticator.py  authenticators.py  conductor.py  config.py  cookie_jar.py  crawler.py  deduplicator.py  diva.py  download_strategies.py  download_summary.py  downloaders.py  errors.py  ffm.py  http_crawler.py  http_downloader.py  ilias.py  ilias_authenticators.py  ipd.py  limiter.py  location.py  logging.py  new_organizer.py  norbert.py  organizer.py  os_exams.py  output_dir.py  pferd.py  progress.py  read_write_lock.py  report.py  temp_folder.py  tgi.py  tgi_jimbo.py  ti.py  tmp_dir.py  transform.py  transformer.py  (+4 more)
PFERD/auth/: __init__.py  authenticator.py  credential_file.py  keyring.py  keyring_authenticator.py  pass_.py  passauth.py  simple.py  tfa.py
PFERD/authenticators/: __init__.py  simple.py  tfa.py
PFERD/cli/: __init__.py  command_fau_ilias_web.py  command_ilias_web.py  command_kit_ilias_web.py  command_kit_ipd.py  command_local.py  common_ilias_args.py  ilias_common.py  local.py  parser.py
PFERD/crawl/: __init__.py  crawler.py  http_crawler.py  kit_ipd_crawler.py  kit_media_portal.py  language_translator_crawler.py  local_crawler.py  shib_login.py
PFERD/crawl/ilias/: __init__.py  async_helper.py  async_helpers.py  fau_ilias_web_crawler.py  fau_shibboleth_login.py  file_templates.py  ilias_html_cleaner.py  ilias_web_crawler.py  kit_ilias_html.py  kit_ilias_web_crawler.py  shibboleth_login.py  simplesaml_login.py
PFERD/crawlers/: __init__.py  dummy.py  ilias.py  local.py
PFERD/crawlers/ilias/: __init__.py  file_templates.py  kit_ilias_html.py  kit_ilias_web_crawler.py  kit_web_ilias_crawler.py
PFERD/ilias/: __init__.py  authenticators.py  crawler.py  date_demangler.py  download_strategies.py  downloader.py  syncronizer.py
scripts/: build  build-python-dist  bump-version  check  format  setup
