[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PFERD"
description = "Programm zum Flotten Einfachen Runterladen von Dateien"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
  "aiohttp>=3.8.1",
  "beautifulsoup4>=4.10.0",
  "rich>=11.0.0",
  "keyring>=23.5.0",
  "certifi>=2021.10.8"
]
dynamic = ["version"]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/Garmelon/PFERD"
Issues = "https://github.com/Garmelon/PFERD/issues"

[project.scripts]
pferd = "PFERD.__main__:main"

[tool.setuptools.dynamic]
version = { attr = "PFERD.version.VERSION" }

[tool.flake8]
max-line-length = 110

[tool.isort]
line_length = 110

[tool.autopep8]
max_line_length = 110
in-place = true
recursive = true

[tool.mypy]
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_unreachable = true
show_error_context = true
ignore_missing_imports = true
