[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PFERD"
dependencies = [
  "aiohttp>=3.8.1",
  "beautifulsoup4>=4.10.0",
  "rich>=11.0.0",
  "keyring>=23.5.0",
  "certifi>=2021.10.8"
]
dynamic = ["version"]
requires-python = ">=3.11"

[project.scripts]
pferd = "PFERD.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "PFERD.version.VERSION"}

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
  "UP045",
  "SIM114",
  "B023"
]

[tool.mypy]
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_unreachable = true
show_error_context = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pyinstaller>=6.16.0",
    "ruff>=0.14.1",
]
