[metadata]
name = PFERD
version = attr: PFERD.version.__version__

[options]
packages = PFERD
python_requires = >=3.8
install_requires =
  aiohttp>=3.7.4.post0
  beautifulsoup4>=4.9.3
  rich>=10.1.0
  beautifulsoup4>=4.9.3

[options.entry_points]
console_scripts =
  pferd = PFERD.__main__:main

[pycodestyle]
max-line-length = 110