[metadata]
name = PFERD
version = attr: PFERD.version.VERSION

[options]
packages = find:
python_requires = >=3.8
install_requires =
  aiohttp>=3.7.4.post0
  beautifulsoup4>=4.9.3
  rich>=10.1.0
  keyring>=23.0.1

[options.entry_points]
console_scripts =
  pferd = PFERD.__main__:main

[flake8]
max_line_length = 110

[isort]
line_length = 110
