[metadata]
name = PFERD
version = attr: PFERD.version.VERSION

[options]
packages = find:
python_requires = >=3.9
install_requires =
  aiohttp>=3.8.1
  beautifulsoup4>=4.10.0
  rich>=11.0.0
  keyring>=23.5.0
  certifi>=2021.10.8
  requests>=2.28.1

[options.entry_points]
console_scripts =
  pferd = PFERD.__main__:main

[flake8]
max_line_length = 110

[isort]
line_length = 110
